# jlpt-sensei-anki

./: .gitignore  README.md  pyproject.toml
src/: anki_deck.py  grammar_example.py  jlpt_sensei_download.py
